demo-apps/nsx-demo-rc/nsx-demo-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nsx-demo
  namespace: nsx-demo-rc
  labels:
    app: nsx-demo
spec:
  ports:
    - port: 80
  selector:
    app: nsx-demo
